# raspberrypi-rustpy

./: .gitignore  Makefile  README.md
Documentation/: Python Controller Architecture.pdn  Web Server Architecture.pdn  architecture.pdn
LampController/: README.md  client_test.py  demo.py  lamp_process.py  rpipy.py
RPiPython/: Makefile  README.md
RPiPython/Lib/: demo.py  rpipy.py
RPiPython/src/: lib.rs  main.rs
RustEmbedded/: Cargo.toml  README.md  memory.x  openocd.cfg  openocd.gdb
RustEmbedded/.cargo/: config
RustEmbedded/src/: _main.rs  _main_1.rs  _main_2.rs  bluetooth.rs  helper.rs  led_matrix.rs  main.rs  main_mda.rs  main_timer.rs  main_timer2.rs  main_windel.rs
RustPyLib/: Cargo.toml
RustPyLib/src/: lib.rs
ScriptControl/: README.md  client_test.py  demo_controller_app.py
ScriptControl/scriptcontrol/: __init__.py
ScriptControl/scriptcontrol/demo/: cosmic.py  demo.py  luminolib.py  rainbow.py
ScriptControl/sources/: client_test.py  demo.py  demo_vars  script_control_process.py
WebServer/: Cargo.toml  README.md  users.txt
WebServer/src/: helper.rs  main.rs
WebServer/static/css/: sliders.css
WebServer/static/javascript/: socket_alerts.js
WebServer/templates/: base.tera  cosmic.html  demo.html  demo.tera  index.html  login.html  logout.html  maintenance.html  rainbow.html
rpi-web/: Cargo.toml  README.md
rpi-web/src/: helper.rs  main.rs
rpi-web/static/: index.html
