[package]
name = "rpi_web"
version = "0.1.0"
authors = ["Aurelien Montmejat <aurelien.montmejat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
zmq = "0.9"
serde_cbor = "0.11.1"
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["serve", "tera_templates"]

[dependencies.tera]
version = "1"
default-features = false