[package]
name = "rpi_web"
version = "0.1.0"
authors = ["Aurelien Montmejat <aurelien.montmejat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.5", default-features = false }
zmq = "0.9"
serde_cbor = "0.11.1"
serde_json = "1.0.56"
tokio-tungstenite = "*"
tokio = { version = "0.2.21", features = ["full"] }
futures-util = "0.3.5"
serde = "1.0.114"
rust-crypto = "0.2.36"
bluetooth-serial-port = "0.6.0"

[dependencies.tungstenite]
version = "0.10.0"
default-features = false

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["serve"]

[dependencies.askama]
version = "0.9"
features = ["with-rocket"]